# unhandled_dump

./: .gitignore  CMakeLists.txt  CmakePresets.json  LICENSE  README.md  build.bat  vcpkg-configuration.json  vcpkg.json
cli_test/: CMakeLists.txt
cli_test/include/: cli.h
cli_test/src/: cli.cpp
cmake/modules/: ide_utils.cmake  paths_utils.cmake
test/: CmakeLists.txt  basic_test.cpp
unhandled_dump/: CMakeLists.txt
unhandled_dump/common/api/include/: iapi.h
unhandled_dump/common/api/include/handlers/windows/: minidump.h
unhandled_dump/common/api/src/: winapi.cpp
unhandled_dump/common/api/src/handlers/windows/: minidump.cpp
unhandled_dump/core/include/: last_dumper.h
unhandled_dump/core/src/: last_dumper.cpp
